--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 h1 {
-  background-image: url(../images/yellow.jpg);
+  background-color: orange;
   text-align: center;
 }
 h2 {
@@ -8,4 +8,10 @@ h2 {
 h3 {
   text-align: center;
   font-size: 15px
+}
+.box-one {
+  background: orange
+}
+.box-two {
+  background-image: url();
 }
