--- a/css/styles.css
+++ b/css/styles.css
@@ -1,17 +1,29 @@
 h1 {
-  background-color: orange;
-  text-align: center;
+  font-family: monospace;
 }
 h2 {
   text-align: center;
+  font-size: 20px;
+  font-family: monospace;
 }
 h3 {
   text-align: center;
-  font-size: 15px
+  font-size: 15px;
+  font-family: monospace;
+}
+
+.para {
+  font-family: monospace;
+  text-align: center;
 }
 .box-one {
-  background: orange
+  background-color: orange;
+  width: 300px;
+  border: 10px solid Black;
+  font-family: monospace;
 }
 .box-two {
-  background-image: url();
+  background-color: orange;
+  border: 10px solid Black;
+  font-family: monospace;
 }
